Added mecanism to initialize NUI even if InitNui is not called (prototype)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,19 @@
 [package]
 name = "dioxus-nui"
+description = "Widget library for the Dioxus framework that tries to look as similar as possible to the native widgets of a platform."
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
 dioxus = { git = "https://github.com/DioxusLabs/dioxus" }
-dioxus-desktop = { git = "https://github.com/DioxusLabs/dioxus" }
 reusable = "0.1.0"
 dioxus-nui-macros = { path = "dioxus-nui-macros" }
 
 [dev-dependencies]
+dioxus-desktop = { git = "https://github.com/DioxusLabs/dioxus" }
 
+
+[features]
+default = ["auto-init"]
+
+auto-init = []          # Automatically initialize NUI when a component is used. Enabled by default.
